Simplifies the window creation process

--- a/examples/triangle/CMakeLists.txt
+++ b/examples/triangle/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(triangle WIN32 src/main.cpp)
+add_executable(triangle src/main.cpp)
 
 target_link_libraries(triangle PRIVATE vulkan_renderer)
 set_compiler_options(triangle)
