Adds Vulkan Instance and validation layers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,24 @@ set(GLOBAL PROPERTY CXX_STANDARD_REQUIRED 20)
 find_package(spdlog CONFIG REQUIRED)
 find_package(Vulkan REQUIRED)
 
-add_library(vulkan_renderer STATIC
-    include/vulkan-renderer/window/game_window.hpp
+set(vulkan_renderer_SOURCES
     src/game_window.cpp
+    src/instance.cpp
+)
+
+set(vulkan_renderer_HEADERS
+    include/vulkan-renderer/window/game_window.hpp
+    include/vulkan-renderer/vulkan/instance.hpp
+)
+
+add_library(vulkan_renderer STATIC
+    ${vulkan_renderer_HEADERS}
+    ${vulkan_renderer_SOURCES}
 )
 
 target_include_directories(vulkan_renderer PUBLIC include)
-target_link_libraries(vulkan_renderer PRIVATE spdlog::spdlog Vulkan::Vulkan)
+target_link_libraries(vulkan_renderer PRIVATE spdlog::spdlog)
+target_link_libraries(vulkan_renderer PUBLIC Vulkan::Vulkan)
 set_compiler_options(vulkan_renderer)
 set_warnings(vulkan_renderer)
 
